Added the html structure

--- a/index.html
+++ b/index.html
@@ -15,8 +15,64 @@
   </head>
   <body>
     <div class="container">
-      <h1>Weather Application</h1>
+      <div row>
+        <div col-1>
+          <img src="images\currentlocation.png" alt="currentlocation" />
+        </div>
+        <div col-3>Form type location</div>
+        <div col-2>Search button</div>
+        <div col-3>Current temperature °C|°F</div>
+        <div col-3>
+          <img src="images\sun.png" alt="sun" />
+        </div>
+      </div>
+      <div row>
+        <div col-12>Location</div>
+      </div>
+      <div row>
+        <div col-12>Local time and date</div>
+      </div>
+      <div row>
+        <div col-12>Short forecast in words</div>
+      </div>
+      <div row>
+        <div col>Mon</div>
+        <div col>Tue</div>
+        <div col>Wed</div>
+        <div col>Thu</div>
+        <div col>Fri</div>
+      </div>
+      <div row>
+        <div col>°C</div>
+        <div col>°C</div>
+        <div col>°C</div>
+        <div col>°C</div>
+        <div col>°C</div>
+      </div>
+      <div row>
+        <div col>
+          <img src="images\cloud.png" alt="cloud" />
+        </div>
+        <div col>
+          <img src="images\sunclouds.png" alt="sunclouds" />
+        </div>
+        <div col>
+          <img src="images\sun.png" alt="sun" />
+        </div>
+        <div col>
+          <img src="images\sunwind.png" alt="sunwind" />
+        </div>
+        <div col>
+          <img src="images\sunclouds.png" alt="sunclouds" />
+        </div>
+      </div>
     </div>
+    <a
+      href="https://github.com/Laraoldebolhaar/weather-app"
+      target="_blank"
+      id="github-link"
+      >Open-source code by <strong>Lara olde Bolhaar</strong></a
+    >
     <script src="src/app.js"></script>
   </body>
 </html>
