Corrected mistakes in html
Forgot to use class in the rows and cols

--- a/index.html
+++ b/index.html
@@ -15,55 +15,63 @@
   </head>
   <body>
     <div class="container">
-      <div row>
-        <div col-1>
-          <img src="images\currentlocation.png" alt="currentlocation" />
+      <div class="weather-app">
+        <div class="row">
+          <div class="col-1">
+            <img src="images\currentlocation.png" alt="currentlocation" />
+          </div>
+          <div class="col-3">Form type location</div>
+          <div class="col-2">Search button</div>
+          <div class="col-3">Current temperature °C|°F</div>
+          <div class="col-3">
+            <img src="images\sun.png" alt="sun" />
+          </div>
         </div>
-        <div col-3>Form type location</div>
-        <div col-2>Search button</div>
-        <div col-3>Current temperature °C|°F</div>
-        <div col-3>
-          <img src="images\sun.png" alt="sun" />
+
+        <div class="row">
+          <div class="col-12">Location</div>
         </div>
-      </div>
-      <div row>
-        <div col-12>Location</div>
-      </div>
-      <div row>
-        <div col-12>Local time and date</div>
-      </div>
-      <div row>
-        <div col-12>Short forecast in words</div>
-      </div>
-      <div row>
-        <div col>Mon</div>
-        <div col>Tue</div>
-        <div col>Wed</div>
-        <div col>Thu</div>
-        <div col>Fri</div>
-      </div>
-      <div row>
-        <div col>°C</div>
-        <div col>°C</div>
-        <div col>°C</div>
-        <div col>°C</div>
-        <div col>°C</div>
-      </div>
-      <div row>
-        <div col>
-          <img src="images\cloud.png" alt="cloud" />
+
+        <div class="row">
+          <div class="col-12">Local time and date</div>
         </div>
-        <div col>
-          <img src="images\sunclouds.png" alt="sunclouds" />
+
+        <div class="row">
+          <div class="col-12">Short forecast in words</div>
         </div>
-        <div col>
-          <img src="images\sun.png" alt="sun" />
+
+        <div class="row">
+          <div class="col">Mon</div>
+          <div class="col">Tue</div>
+          <div class="col">Wed</div>
+          <div class="col">Thu</div>
+          <div class="col">Fri</div>
         </div>
-        <div col>
-          <img src="images\sunwind.png" alt="sunwind" />
+
+        <div class="row">
+          <div class="col">°C</div>
+          <div class="col">°C</div>
+          <div class="col">°C</div>
+          <div class="col">°C</div>
+          <div class="col">°C</div>
         </div>
-        <div col>
-          <img src="images\sunclouds.png" alt="sunclouds" />
+
+        <div class="row">
+          <div class="col">
+            <img src="images\cloud.png" alt="cloud" />
+          </div>
+          <div class="col">
+            <img src="images\sunclouds.png" alt="sunclouds" />
+          </div>
+          <div class="col">
+            <img src="images\sun.png" alt="sun" />
+          </div>
+          <div class="col">
+            <img src="images\sunwind.png" alt="sunwind" />
+          </div>
+          <div class="col">
+            <img src="images\sunclouds.png" alt="sunclouds" />
+          </div>
         </div>
       </div>
     </div>
