--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100;200;300;400;500;600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sriracha&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather Application</title>
   </head>
   <body>
@@ -25,59 +24,101 @@
       <div class="weather-app">
         <div class="row">
           <div class="col-1">
-            <img src="images\currentlocation.png" alt="currentlocation" />
+            <button type="button" id="current-location">
+              <img
+                src="images\currentlocation.png"
+                alt="currentlocation"
+                id="current-location-img"
+              />
+            </button>
           </div>
           <div class="col-3">Form type location</div>
           <div class="col-2">Search button</div>
-          <div class="col-3">Current temperature °C|°F</div>
           <div class="col-3">
-            <img src="images\sun.png" alt="sun" />
+            <h1>XX°C|°F</h1>
+          </div>
+          <div class="col-3">
+            <img src="images\sun.png" alt="sun" class="main-image" />
           </div>
         </div>
 
         <div class="row">
-          <div class="col-12">Location</div>
+          <div class="col-12">
+            <h2>Location</h2>
+          </div>
         </div>
 
         <div class="row">
-          <div class="col-12">Local time and date</div>
+          <div class="col-12">
+            <h3>Local time and date</h3>
+          </div>
         </div>
 
         <div class="row">
-          <div class="col-12">Short forecast in words</div>
-        </div>
-
-        <div class="row">
-          <div class="col">Mon</div>
-          <div class="col">Tue</div>
-          <div class="col">Wed</div>
-          <div class="col">Thu</div>
-          <div class="col">Fri</div>
-        </div>
-
-        <div class="row">
-          <div class="col">°C</div>
-          <div class="col">°C</div>
-          <div class="col">°C</div>
-          <div class="col">°C</div>
-          <div class="col">°C</div>
+          <div class="col-12">
+            <h4>Short forecast in words</h4>
+          </div>
         </div>
 
         <div class="row">
           <div class="col">
-            <img src="images\cloud.png" alt="cloud" />
+            <h5>Mon</h5>
           </div>
           <div class="col">
-            <img src="images\sunclouds.png" alt="sunclouds" />
+            <h5>Tue</h5>
           </div>
           <div class="col">
-            <img src="images\sun.png" alt="sun" />
+            <h5>Wed</h5>
           </div>
           <div class="col">
-            <img src="images\sunwind.png" alt="sunwind" />
+            <h5>Thu</h5>
           </div>
           <div class="col">
-            <img src="images\sunclouds.png" alt="sunclouds" />
+            <h5>Fri</h5>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <h6>X°C</h6>
+          </div>
+          <div class="col">
+            <h6>X°C</h6>
+          </div>
+          <div class="col">
+            <h6>X°C</h6>
+          </div>
+          <div class="col">
+            <h6>X°C</h6>
+          </div>
+          <div class="col">
+            <h6>X°C</h6>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <img src="images\cloud.png" alt="cloud" class="forecast-img" />
+          </div>
+          <div class="col">
+            <img
+              src="images\sunclouds.png"
+              alt="sunclouds"
+              class="forecast-img"
+            />
+          </div>
+          <div class="col">
+            <img src="images\sun.png" alt="sun" class="forecast-img" />
+          </div>
+          <div class="col">
+            <img src="images\sunwind.png" alt="sunwind" class="forecast-img" />
+          </div>
+          <div class="col">
+            <img
+              src="images\sunclouds.png"
+              alt="sunclouds"
+              class="forecast-img"
+            />
           </div>
         </div>
       </div>
