--- a/index.html
+++ b/index.html
@@ -21,114 +21,120 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <div class="row">
-          <div class="col-1">
-            <button type="button" id="current-location">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="row">
+            <div class="col-1">
+              <button type="button" id="current-location">
+                <img
+                  src="images\currentlocation.png"
+                  alt="currentlocation"
+                  id="current-location-img"
+                />
+              </button>
+            </div>
+            <div class="col-3">Form type location</div>
+            <div class="col-2">Search button</div>
+            <div class="col-3">
+              <h1>XX°C|°F</h1>
+            </div>
+            <div class="col-3">
+              <img src="images\sun.png" alt="sun" class="main-image" />
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <h2>Location</h2>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <h3>Local time and date</h3>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-12">
+              <h4>Short forecast in words</h4>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <h5>Mon</h5>
+            </div>
+            <div class="col">
+              <h5>Tue</h5>
+            </div>
+            <div class="col">
+              <h5>Wed</h5>
+            </div>
+            <div class="col">
+              <h5>Thu</h5>
+            </div>
+            <div class="col">
+              <h5>Fri</h5>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <h6>X°C</h6>
+            </div>
+            <div class="col">
+              <h6>X°C</h6>
+            </div>
+            <div class="col">
+              <h6>X°C</h6>
+            </div>
+            <div class="col">
+              <h6>X°C</h6>
+            </div>
+            <div class="col">
+              <h6>X°C</h6>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              <img src="images\cloud.png" alt="cloud" class="forecast-img" />
+            </div>
+            <div class="col">
               <img
-                src="images\currentlocation.png"
-                alt="currentlocation"
-                id="current-location-img"
+                src="images\sunclouds.png"
+                alt="sunclouds"
+                class="forecast-img"
               />
-            </button>
-          </div>
-          <div class="col-3">Form type location</div>
-          <div class="col-2">Search button</div>
-          <div class="col-3">
-            <h1>XX°C|°F</h1>
-          </div>
-          <div class="col-3">
-            <img src="images\sun.png" alt="sun" class="main-image" />
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <h2>Location</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-12">
-            <h3>Local time and date</h3>
+            </div>
+            <div class="col">
+              <img src="images\sun.png" alt="sun" class="forecast-img" />
+            </div>
+            <div class="col">
+              <img
+                src="images\sunwind.png"
+                alt="sunwind"
+                class="forecast-img"
+              />
+            </div>
+            <div class="col">
+              <img
+                src="images\sunclouds.png"
+                alt="sunclouds"
+                class="forecast-img"
+              />
+            </div>
           </div>
         </div>
-
-        <div class="row">
-          <div class="col-12">
-            <h4>Short forecast in words</h4>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <h5>Mon</h5>
-          </div>
-          <div class="col">
-            <h5>Tue</h5>
-          </div>
-          <div class="col">
-            <h5>Wed</h5>
-          </div>
-          <div class="col">
-            <h5>Thu</h5>
-          </div>
-          <div class="col">
-            <h5>Fri</h5>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <h6>X°C</h6>
-          </div>
-          <div class="col">
-            <h6>X°C</h6>
-          </div>
-          <div class="col">
-            <h6>X°C</h6>
-          </div>
-          <div class="col">
-            <h6>X°C</h6>
-          </div>
-          <div class="col">
-            <h6>X°C</h6>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <img src="images\cloud.png" alt="cloud" class="forecast-img" />
-          </div>
-          <div class="col">
-            <img
-              src="images\sunclouds.png"
-              alt="sunclouds"
-              class="forecast-img"
-            />
-          </div>
-          <div class="col">
-            <img src="images\sun.png" alt="sun" class="forecast-img" />
-          </div>
-          <div class="col">
-            <img src="images\sunwind.png" alt="sunwind" class="forecast-img" />
-          </div>
-          <div class="col">
-            <img
-              src="images\sunclouds.png"
-              alt="sunclouds"
-              class="forecast-img"
-            />
-          </div>
-        </div>
+        <a
+          href="https://github.com/Laraoldebolhaar/weather-app"
+          target="_blank"
+          id="github-link"
+          >Open-source code by <strong>Lara olde Bolhaar</strong></a
+        >
       </div>
     </div>
-    <a
-      href="https://github.com/Laraoldebolhaar/weather-app"
-      target="_blank"
-      id="github-link"
-      >Open-source code by <strong>Lara olde Bolhaar</strong></a
-    >
     <script src="src/app.js"></script>
   </body>
 </html>
