Fine tuned the CSS
Not 100% yet but good for now

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                 />
               </button>
             </div>
-            <div class="col-3">Form type location</div>
-            <div class="col-2">Search button</div>
+            <div class="col-3">Type location</div>
+            <div class="col-2">
+              <input type="submit" value="Search" class="btn btn-warning" />
+            </div>
             <div class="col-3">
-              <h1>XX°C|°F</h1>
+              <h1>XX<span id="celcius-fahrenheit">°C|°F</span></h1>
             </div>
             <div class="col-3">
               <img src="images\sun.png" alt="sun" class="main-image" />
@@ -81,19 +83,19 @@
 
           <div class="row">
             <div class="col">
-              <h6>X°C</h6>
+              <h6>XX°C</h6>
             </div>
             <div class="col">
-              <h6>X°C</h6>
+              <h6>XX°C</h6>
             </div>
             <div class="col">
-              <h6>X°C</h6>
+              <h6>XX°C</h6>
             </div>
             <div class="col">
-              <h6>X°C</h6>
+              <h6>XX°C</h6>
             </div>
             <div class="col">
-              <h6>X°C</h6>
+              <h6>XX°C</h6>
             </div>
           </div>
 
