--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
               <input type="submit" value="Search" class="btn btn-warning" />
             </div>
             <div class="col-3">
-              <h1>XX<span id="celcius-fahrenheit">°C|°F</span></h1>
+              <h1 id="temperature"></h1>
+              <span class="units"
+                ><a href="#" id="celcius" class="active">°C</a>|
+                <a href="#" id="fahrenheit">°F</a></span
+              >
             </div>
             <div class="col-3">
               <img src="images\sun.png" alt="sun" class="main-image" />
@@ -48,7 +52,7 @@
 
           <div class="row">
             <div class="col-12">
-              <h2>Location</h2>
+              <h2 id="location"></h2>
             </div>
           </div>
 
@@ -60,7 +64,14 @@
 
           <div class="row">
             <div class="col-12">
-              <h4>Short forecast in words</h4>
+              <h4 id="forecast-in-words">
+                Today you can expect a low of
+                <span id="temp-low"></span>°C and a high of
+                <span id="temp-high"></span>°C. Due to the wind of
+                <span id="wind"></span>km/h and the humidity of
+                <span id="humidity"></span>% it might fee like
+                <span id="feels-like"></span>°C.
+              </h4>
             </div>
           </div>
 
