--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               >
             </div>
             <div class="col-3">
-              <img src="images\sun.png" alt="sun" class="main-image" />
+              <img src="" alt="sun" id="icon" class="main-image" />
             </div>
           </div>
 
