--- a/index.html
+++ b/index.html
@@ -25,31 +25,48 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="row">
-            <div class="col-1">
-              <button type="button" id="current-location">
-                <img
-                  src="images\currentlocation.png"
-                  alt="currentlocation"
-                  id="current-location-img"
-                />
-              </button>
-            </div>
-            <div class="col-3">Type location</div>
-            <div class="col-2">
-              <input type="submit" value="Search" class="btn btn-warning" />
-            </div>
-            <div class="col-3" id="current-temperature">
-              <h1 id="temperature"></h1>
-              <span class="units"
-                ><a href="#" id="celcius" class="active">°C</a>|<a
-                  href="#"
-                  id="fahrenheit"
-                  >°F</a
-                ></span
-              >
-            </div>
-            <div class="col-3">
-              <img src="" alt="sun" id="icon" class="main-image" />
+            <div class="mb-3">
+              <div class="d-flex flex-wrap">
+                <div class="col-1">
+                  <button type="button" id="current-location">
+                    <img
+                      src="images\currentlocation.png"
+                      alt="currentlocation"
+                      id="current-location-img"
+                    />
+                  </button>
+                </div>
+                <form id="search-form">
+                  <div class="col">
+                    <input
+                      type="search"
+                      placeholder="Type a city..."
+                      class="form-control"
+                      id="city-input"
+                    />
+                  </div>
+                  <div class="col">
+                    <input
+                      type="submit"
+                      value="Search"
+                      class="btn btn-warning"
+                    />
+                  </div>
+                </form>
+                <div class="col" id="current-temperature">
+                  <h1 id="temperature"></h1>
+                  <span class="units"
+                    ><a href="#" id="celcius" class="active">°C</a>|<a
+                      href="#"
+                      id="fahrenheit"
+                      >°F</a
+                    ></span
+                  >
+                </div>
+                <div class="col">
+                  <img src="" alt="sun" id="icon" class="main-image" />
+                </div>
+              </div>
             </div>
           </div>
 
