--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
           <div class="row">
             <div class="mb-3">
               <div class="d-flex flex-wrap">
+                  <div class="col-4">
+                    <form id="search-form">
+                    <input
+                      type="search"
+                      placeholder="Type a city..."
+                      class="form-control"
+                      id="city-input"
+                    />
+                  </div>
+                  <div class="col-2">
+                    <input
+                      type="submit"
+                      value="Search"
+                      class="btn btn-warning"
+                    />
+                  </form>
+                </div>
                 <div class="col-1">
                   <button type="button" id="current-location">
                     <img
@@ -35,24 +52,8 @@
                       id="current-location-img"
                     />
                   </button>
-                </div>
-                <form id="search-form">
-                  <div class="col">
-                    <input
-                      type="search"
-                      placeholder="Type a city..."
-                      class="form-control"
-                      id="city-input"
-                    />
-                  </div>
-                  <div class="col">
-                    <input
-                      type="submit"
-                      value="Search"
-                      class="btn btn-warning"
-                    />
-                  </div>
-                </form>
+                </div>                
+          
                 <div class="col" id="current-temperature">
                   <h1 id="temperature"></h1>
                   <span class="units"
@@ -72,7 +73,7 @@
 
           <div class="row">
             <div class="col-12">
-              <h2 id="location"></h2>
+              <h2 id="location"> Location </h2>
             </div>
           </div>
 
