--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
           <div class="row">
             <div class="col-12">
               <h4 id="forecast-in-words">
-                Today you can expect a low of <span id="temp-low"></span>°C and
-                a high of <span id="temp-high"></span>°C. Due to the wind of
+                Today you can expect a low of <span id="temp-low"></span><span id="c-text-one">°C</span> and
+                a high of <span id="temp-high"></span><span id="c-text-two">°C</span>. Due to the wind of
                 <span id="wind"></span>km/h and the humidity of
                 <span id="humidity"></span>% it might fee like
-                <span id="feels-like"></span>°C.
+                <span id="feels-like"></span><span id="c-text-three">°C</span>.
               </h4>
             </div>
           </div>
