Removed forecast html
Removed the html for the forecast and placed it in the JS

--- a/index.html
+++ b/index.html
@@ -93,71 +93,9 @@
             </div>
           </div>
 
-          <div class="row">
-            <div class="col">
-              <h5>Mon</h5>
-            </div>
-            <div class="col">
-              <h5>Tue</h5>
-            </div>
-            <div class="col">
-              <h5>Wed</h5>
-            </div>
-            <div class="col">
-              <h5>Thu</h5>
-            </div>
-            <div class="col">
-              <h5>Fri</h5>
-            </div>
+          <div class="weather-forecast" id="forecast">
           </div>
 
-          <div class="row">
-            <div class="col">
-              <h6>XX°C</h6>
-            </div>
-            <div class="col">
-              <h6>XX°C</h6>
-            </div>
-            <div class="col">
-              <h6>XX°C</h6>
-            </div>
-            <div class="col">
-              <h6>XX°C</h6>
-            </div>
-            <div class="col">
-              <h6>XX°C</h6>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <img src="images\cloud.png" alt="cloud" class="forecast-img" />
-            </div>
-            <div class="col">
-              <img
-                src="images\sunclouds.png"
-                alt="sunclouds"
-                class="forecast-img"
-              />
-            </div>
-            <div class="col">
-              <img src="images\sun.png" alt="sun" class="forecast-img" />
-            </div>
-            <div class="col">
-              <img
-                src="images\sunwind.png"
-                alt="sunwind"
-                class="forecast-img"
-              />
-            </div>
-            <div class="col">
-              <img
-                src="images\sunclouds.png"
-                alt="sunclouds"
-                class="forecast-img"
-              />
-            </div>
-          </div>
         </div>
         <a
           href="https://github.com/Laraoldebolhaar/weather-app"
