Made some changes to the CSS
Changed the button color and the current location button image

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
                     <input
                       type="submit"
                       value="Search"
-                      class="btn btn-warning"
+                      class="btn btn-dark"
                     />
                   </form>
                 </div>
                 <div class="col-1">
                   <button type="button" id="current-location">
                     <img
-                      src="images\currentlocation.png"
+                      src="images\locationorange.png"
                       alt="currentlocation"
                       id="current-location-img"
                     />
@@ -64,7 +64,7 @@
                   >
                 </div>
                 <div class="col">
-                  <img src="" alt="sun" id="icon" class="main-image" />
+                  <img src="" alt="" id="icon" class="main-image" />
                 </div>
               </div>
           </div>
